<resources>
    <string name="app_name">MySplash</string>
    <string name="label1">Contraseña</string>
    <string name="inputPass">Contraseña</string>
    <string name="usuario">Usuario</string>
    <string name="label3">Usuario</string>
    <string name="topText">¡Bienvenido!</string>
    <string name="topText1">¿Ya tienes una cuenta?</string>
    <string name="textNewUsu">¿Nuevo usuario? ¡Registrate aqui!</string>
    <string name="label5">Registrarse</string>
    <string name="textForgot">¿Olvidaste tu contraseña?</string>
    <string name="boton1">Recuperar contraseña</string>
    <string name="actDT">Date/Time</string>

    <string name="hi">¡Hola!</string>
    <string name="hi1">¡Bienvenido de nuevo!</string>

    <string name="boton2">Login</string>

    <string name="usuario_label">Usuario</string>
    <string name="password_label">Password</string>
    <string name="olvcontraseña">Recuperar contraseña</string>
    <string name="login">Iniciar sesion</string>
    <string name="registro">¡Registrame!</string>
    <string name="email">Email</string>
    <string name="HoJ">¿Prefiere la horchata o la jamaica?</string>
    <string name="h">Horchata</string>
    <string name="j">Jamaica</string>
    <string name="Ninguna">Ninguna</string>
    <string name="hombre">Hombre</string>
    <string name="mujer">Mujer</string>
    <string name="genero">Genero:</string>
    <string name="fec_nac">Fecha de nacimiento</string>
    <string name="in">Número celular</string>
    <string name="notificaciones">Notificaciones</string>
    <string name="region">Región</string>
    <string name="name">Nombre</string>
    <string name="pick">Buscar fecha</string>
    <string name="w">Welcome to the jungle</string>
    <string name="inicio_sesion">inicio_sesion</string>
    <string name="aja">Vacio</string>
    <string name="bienvenido">¡Bienvenido!</string>
    <string name="menu">Menú</string>
    <string name="Recuperar">Recuperar</string>
    <string name="agregar">Agregar contraseña</string>
    <string name="cs">Cerrar Sesión</string>

    <string name="loc">Ubicación :</string>
    <string name="img">Cambiar :</string>
    <string name="c1">Contraseña correo</string>
    <string name="c2">Nueva contraseña</string>
    <string name="exp">Ingresa tu usuario, la contraseña enviada por correo, y la nueva contraseña que quieres utilizar</string>
    <string name="v1">Volver al registro</string>
    <string name="v2">Ingresar con nueva contraseña</string>
    <string name="label2"> Usuario</string>
    <string name="label4">RECUPERA TU CONTRASEÑA</string>
    <string name="label7"> Contraseña del correo</string>
    <string name="label6"> Contraseña nueva</string>

</resources>